[package]
name = "skip-intro-ac6"
version = "1.1.0"
edition = "2021"

[lib]
name = "skip_the_intro"
crate-type = ["cdylib"]


[features]
Console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version="0.48.0", features=["Win32_System_SystemInformation",  "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_Console", "Win32_System_Memory"]}
fisherman = { git="https://github.com/Nordgaren/fisherman" }
paste = "1.0.12"
